[project]
name = "comfyui-daam"
description = "ComfyUI custom nodes for Diffusion Attentive Attribution Maps (DAAM)"
version = "0.4.0"
license = { file = "LICENSE" }

[project.urls]
Repository = "https://github.com/nisaruj/comfyui-daam"

[tool.comfy]
PublisherId = "nisaruj"
DisplayName = "ComfyUI-DAAM"
Icon = ""
